--- a/RGB.html
+++ b/RGB.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:skyblue;">
+<body style="background-color:green;">
 
 <h1 style="background-color:rgb(255, 0, 0);">rgb(255, 0, 0)</h1>
 <h1 style="background-color:rgb(0, 0, 255);">rgb(0, 0, 255)</h1>
